--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,18 @@
 [package]
-name = "emv"
-version = "0.1.1"
-description = "emv is a blazingly fast email validator"
+name = "emval"
+version = "0.1.0"
+description = "emval is a blazingly fast email validator"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "_emv"
+name = "_emval"
 crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = "0.22.0"
 
-# emv dependencies
+# emval dependencies
 idna = "1.0.2"
 lazy_static = "1.5.0"
 regex = "1.10.5"
