--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "emval"
-version = "0.1.3"
+version = "0.1.4"
 description = "emval is a blazingly fast email validator"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "_emval"
+name = "_emval
 crate-type = ["cdylib"]
 
 [dependencies]
