--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ name = "_emval"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "*", features = ["extension-module", "abi3-py38"] }
+pyo3 = { version = "=0.25.1", features = ["extension-module", "abi3-py38"] }
 
 # emval dependencies
 idna = "1.0.2"
@@ -22,6 +22,7 @@ unicode_names2 = "1.2.2"
 trust-dns-resolver = "0.23.2"
 
 # polars dependencies
-pyo3-polars = { version = "*", features = ["derive", "dtype-struct"] }
-polars = { version = "*", default-features = false, features = ["dtype-struct"] }
-serde = { version = "*", features = ["derive"] }
+pyo3-polars = { version = "0.22", features = ["derive", "dtype-struct"] }
+polars = { version = "0.49.1", features = ["dtype-struct"], default-features = false }
+polars-arrow = { version = "0.49.1", default-features = false }
+serde = { version = "1", features = ["derive"] }
