--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,12 @@ dynamic = ["version"]
 module-name = "emval._emval"
 features = ["pyo3/extension-module"]
 
+[dependency-groups]
+dev = [
+    "polars>=1.32.2",
+    "pytest>=8.4.1",
+]
+
 [project.urls]
 Homepage = "https://github.com/bnkc/emval"
 Issues = "https://github.com/bnkc/emval/issues"
