--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,10 +27,13 @@ dynamic = ["version"]
 module-name = "emval._emval"
 features = ["pyo3/extension-module"]
 
-[dependency-groups]
-dev = [
-    "polars>=1.32.2",
-    "pytest>=8.4.1",
+
+[project.optional-dependencies]
+tests = ["pytest"]
+
+
+polars = [
+  "polars>=1.32.2"
 ]
 
 [project.urls]
