--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,10 @@ name = "emval"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-pyo3 = { version = "=0.25.1", features = ["extension-module", "abi3-py38"], optional = true }
+pyo3 = { version = "=0.25.1", features = [
+  "extension-module",
+  "abi3-py38",
+], optional = true }
 
 # emval dependencies
 icu_normalizer = "2.0.0"
@@ -32,16 +35,23 @@ trust-dns-resolver = { version = "0.23.2", optional = true }
 wasm-bindgen = { version = "0.2", optional = true }
 
 # polars dependencies
-pyo3-polars = { version = "0.22", features = ["derive", "dtype-struct"], optional = true }
-polars = { version = "0.49.1", features = ["dtype-struct"], default-features = false, optional = true }
+pyo3-polars = { version = "0.22", features = [
+  "derive",
+  "dtype-struct",
+], optional = true }
+polars = { version = "0.49.1", features = [
+  "dtype-struct",
+], default-features = false, optional = true }
 polars-arrow = { version = "0.49.1", default-features = false, optional = true }
 serde = { version = "1", features = ["derive"] }
 
 [features]
 default = ["python", "polars"]
 python = ["dep:pyo3", "dep:pyo3-polars", "dep:polars", "dep:polars-arrow"]
-polars = ["dep:pyo3-polars", "dep:polars", "dep:polars-arrow", "dep:trust-dns-resolver"]
+polars = ["dep:pyo3-polars", "dep:polars", "dep:polars-arrow", "dns"]
+dns = ["dep:trust-dns-resolver"]
 wasm = ["dep:wasm-bindgen"]
 
 [profile.release]
 lto = true
+
